fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -155,9 +155,9 @@ margin: 0;
     background: rgba(255, 255, 255, 0.8);
     border-bottom-left-radius:2%;
     border-bottom-right-radius:2%;
-    width: 80vw;
+    width: 80vh;
     width: calc(var(--vw, 1vw) * 80);
-    height: 40vw;
+    height: 40vh;
     height: calc(var(--vw, 1vw) * 40);
     overflow: hidden;
     text-align:center;
